styles.css
*{
  margin:0;
  padding: 0;
  box-sizing: border-box;
}

body{
  background-color: #C2B2B4;
}

.top-half {
  background-color: #3E2A35;
}

.header {
  display: flex;
  align-items: center;
  justify-content: center;
}

.foto-finder-header {
  color: white;
  font-family: sans-serif;
  margin-left: 21px;
  font-size: 2.5rem;
}

.header-and-space{
  display: flex;
  justify-content: space-between;
}

.finder-header{
  color: white;
  font-family: sans-serif;
  font-size: 2.5rem;
}

.favorites-and-add{
  display: flex;
  justify-content: space-between;
  margin-bottom: 25px;
}

.top-half {
  width: 100%;
}

.form-content{
 display: flex;
 flex-direction: column;
 width: 68%;
 margin:auto;
 margin-top: 11px;
}

.foto-finder-logo{
 height:40px;
 width: 40px;
}

.toggle-button  {
 width: 35%;
 height:35px;
 color: white;
 background-color: #5B4447;
 border-style: none;
 font-size: 15px;
}

.toggle-button:hover{
  background-color: #938284;
}

.add-to-album-btn {
  width: 35%;
  height:35px;
  font-size: 15px;
  background-color: #5B4447;
  color:white;
  border-style: none;
}

.add-to-album-btn:hover{
  background-color: #938284;
}

.lower-half {
  background-color: #C2B2B4;
}

.card-text{
  font-size: 1.3rem;
  padding-left: 17px;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: white;
  height: 80px;
}

.card-info {
  overflow: scroll;
  max-height: 80px;
}

.card-title {
  padding-left: 17px;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 1.5rem;
}

.card {
  background-color: white;
  width: 300px;
  height: auto;
  margin: 20px auto;
  box-shadow: 2px 0 2px #bababa, -0.4em 0 0.4em #bababa;

}

.title-caption-text {
  color: grey;
  font-family: sans-serif;
}

.card-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.image {
  display: flex;
  justify-content: space-between;
  height: 175px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}
.icon {
  height: 35px;
  width: 35px;
}

.icon-section {
  background-color: #3E2A35;
  display: flex;
  justify-content: space-between;
  height: 55px;
}

.search-and-icon {
  margin-right: 20px;
}

.delete-icon {
  background-image:url(Images/delete.svg);
  background-repeat: no-repeat;
  border-style: none;
  margin-left: 10px;
  margin-top: 9px;
  background-color: #3E2A35;
  outline: 0;
}

.favorite-icon {
  background-image:url(Images/favorite.svg);
  border-style: none;
  margin-right: 10px;
  margin-top: 9px;
  background-repeat: no-repeat;
  background-color: #3E2A35;
  outline: 0;
}

.search-bar {
  margin-top: 10px;
  height: 30px;
  font-size: 15px;
  border-radius: 10px 0px 0px 10px;
  padding-left: 6px;
}

.caption-input,.title-input {
  height: 38px;
}

.caption-input {
  margin-bottom: 30px;
}

.input-file{
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}

.input-file + label {
  margin-bottom: 30px;
  height:38px; 
  color: white;
  background-color: #5B4447; 
  text-align: center; 
  padding-top: 10px;
  font-family: sans-serif;
}

.search-icon{
  background-color: #C2B2B4;
  width: 30px;
  height: 30px;
  padding: 7px;
  margin-left: -5px;
  border-radius: 0px 10px 10px 0px;
}

label{
  color: grey;
  font-family: sans-serif;
  margin-top: 15px;
}

.input-file + label:hover{
  background-color: #938284
}

.more-less-toggle {
  width: 20%;
  height:35px;
  color: white;
  margin-top: 25px;
  background-color: #5B4447;
  border-style: none;
  font-size: 15px;
}

.more-less-toggle:hover{
  background-color: #938284
}

.bottom-button{
  text-align: center;
}

@media screen and (max-width:1358px){

.card-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  }
}

@media screen and (max-width:1031px){

.card-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin:auto 10px;
  }
}

@media screen and (max-width:707px){

.card-container {
  display: grid;
  grid-template-columns: 1fr;
  margin:auto 10px;
  }
}

@media screen and (max-width:608px){
  .header-and-space {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    text-align: center;
  }
}

@media screen and (max-width:350px){

.foto-finder-header {
   
    margin-left: 10px;
    
}




}

